# DV-ElectricalFramework-DSL-PandaPower

./: .gitattributes  .gitignore  README.md  pyproject.toml
configs/: default_ar.yaml
examples/: ejemplo_tablero_bt.py
src/elecboard/: __init__.py  config.py  core.py  dsl.py  exceptions.py  utils.py  validators.py
src/elecboard/backend/: __init__.py  pandapower_backend.py
tests/: test_build_minimal.py
